--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/router": "^14.2.0",
     "forms": "^1.3.2",
     "jquery": "^3.7.1",
+    "ngx-image-compress": "^15.1.6",
+    "ngx-image-cropper": "^7.2.1",
     "rxjs": "~7.5.0",
     "swal": "^0.1.0",
     "sweetalert2": "^11.10.7",
