--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@angular/animations": "^14.2.0",
     "@angular/common": "^14.2.0",
     "@angular/compiler": "^14.2.0",
-    "@angular/core": "^14.2.0",
+    "@angular/core": "^14.3.0",
+    "@angular/fire": "^7.6.1",
     "@angular/forms": "^14.2.0",
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
     "bootstrap-switch-button": "^1.1.0",
+    "firebase": "^10.11.0",
     "forms": "^1.3.2",
     "jquery": "^3.7.1",
     "jwt-decode": "^4.0.0",
