--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
     "@paypal/paypal-js": "^8.0.5",
+    "@turf/turf": "^7.0.0",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "bootstrap-switch-button": "^1.1.0",
@@ -30,9 +31,12 @@
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "leaflet-control-geocoder": "^2.4.0",
+    "leaflet-geosearch": "^4.0.0",
     "leaflet-routing-machine": "^3.2.12",
     "leaflet.locatecontrol": "^0.81.0",
     "mapbox-gl": "^3.3.0",
+    "moment": "^2.30.1",
+    "ngx-daterangepicker-material": "^6.0.4",
     "ngx-image-compress": "^15.1.6",
     "ngx-image-cropper": "^7.2.1",
     "ol": "^9.2.2",
@@ -43,6 +47,7 @@
     "swal": "^0.1.0",
     "sweetalert2": "^11.10.7",
     "tslib": "^2.3.0",
+    "turf": "^3.0.14",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
