--- a/package.json
+++ b/package.json
@@ -10,17 +10,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.2.0",
+    "@angular/animations": "^14.3.0",
     "@angular/common": "^14.2.0",
     "@angular/compiler": "^14.2.0",
     "@angular/core": "^14.3.0",
     "@angular/fire": "^7.6.1",
     "@angular/forms": "^14.2.0",
+    "@angular/material": "^14.0.3",
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
     "@paypal/paypal-js": "^8.0.5",
     "@turf/turf": "^7.0.0",
+    "apexcharts": "^3.49.1",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "bootstrap-switch-button": "^1.1.0",
