--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
     "font-awesome": "^4.7.0",
     "forms": "^1.3.2",
     "jquery": "^3.7.1",
+    "jquery-ui": "^1.14.1",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "leaflet-control-geocoder": "^2.4.0",
     "leaflet-routing-machine": "^3.2.12",
     "leaflet.locatecontrol": "^0.81.0",
+    "nouislider": "^15.8.1",
     "ol": "^9.2.2",
     "popper.js": "^1.16.1",
     "pusher-js": "^8.4.0-rc2",
@@ -51,7 +53,8 @@
     "@angular-devkit/build-angular": "^14.2.13",
     "@angular/compiler-cli": "^14.2.0",
     "@types/jasmine": "~4.0.0",
-    "@types/jquery": "^3.5.30",
+    "@types/jquery": "^3.5.32",
+    "@types/jqueryui": "^1.12.23",
     "@types/leaflet": "^1.9.12",
     "@types/leaflet-routing-machine": "^3.2.8",
     "@types/mapbox-gl": "^3.1.0",
